All samples taken

--- a/Collecting_Samples.ipynb
+++ b/Collecting_Samples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "65a09a90",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7e20087b",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d53252eb",
    "metadata": {},
    "outputs": [],
@@ -41,248 +41,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "66a5cd34",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read data from PostgreSQL database table and load into a DataFrame instance\n",
-    "flights = pd.read_sql(\"SELECT * from flights order by random() LIMIT 1000\", dbConnection)"
+    "#flights = pd.read_sql(\"SELECT * from flights order by random() LIMIT 500000\", dbConnection)\n",
+    "#flights = pd.read_sql(\"SELECT * from flights LIMIT 10\", dbConnection)\n",
+    "flights=pd.read_sql(\"SELECT * FROM flights TABLESAMPLE SYSTEM(2)\",dbConnection)\n",
+    "#pd.read_sql(\"SELECT COUNT(*) FROM flights\",dbConnection)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9b5fa73c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fl_date</th>\n",
-       "      <th>mkt_unique_carrier</th>\n",
-       "      <th>branded_code_share</th>\n",
-       "      <th>mkt_carrier</th>\n",
-       "      <th>mkt_carrier_fl_num</th>\n",
-       "      <th>op_unique_carrier</th>\n",
-       "      <th>tail_num</th>\n",
-       "      <th>op_carrier_fl_num</th>\n",
-       "      <th>origin_airport_id</th>\n",
-       "      <th>origin</th>\n",
-       "      <th>...</th>\n",
-       "      <th>distance</th>\n",
-       "      <th>carrier_delay</th>\n",
-       "      <th>weather_delay</th>\n",
-       "      <th>nas_delay</th>\n",
-       "      <th>security_delay</th>\n",
-       "      <th>late_aircraft_delay</th>\n",
-       "      <th>first_dep_time</th>\n",
-       "      <th>total_add_gtime</th>\n",
-       "      <th>longest_add_gtime</th>\n",
-       "      <th>no_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2019-03-28</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>2176</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>N725UW</td>\n",
-       "      <td>2176</td>\n",
-       "      <td>11057</td>\n",
-       "      <td>CLT</td>\n",
-       "      <td>...</td>\n",
-       "      <td>83.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2018-06-02</td>\n",
-       "      <td>WN</td>\n",
-       "      <td>WN</td>\n",
-       "      <td>WN</td>\n",
-       "      <td>3861</td>\n",
-       "      <td>WN</td>\n",
-       "      <td>N8538V</td>\n",
-       "      <td>3861</td>\n",
-       "      <td>13232</td>\n",
-       "      <td>MDW</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1855.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2018-01-13</td>\n",
-       "      <td>AS</td>\n",
-       "      <td>AS_CODESHARE</td>\n",
-       "      <td>AS</td>\n",
-       "      <td>2355</td>\n",
-       "      <td>QX</td>\n",
-       "      <td>N453QX</td>\n",
-       "      <td>2355</td>\n",
-       "      <td>11884</td>\n",
-       "      <td>GEG</td>\n",
-       "      <td>...</td>\n",
-       "      <td>279.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2018-11-03</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>2683</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>N153AN</td>\n",
-       "      <td>2683</td>\n",
-       "      <td>11298</td>\n",
-       "      <td>DFW</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1464.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2018-03-18</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>2072</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>N36469</td>\n",
-       "      <td>2072</td>\n",
-       "      <td>13930</td>\n",
-       "      <td>ORD</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1182.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 42 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      fl_date mkt_unique_carrier branded_code_share mkt_carrier  \\\n",
-       "0  2019-03-28                 AA                 AA          AA   \n",
-       "1  2018-06-02                 WN                 WN          WN   \n",
-       "2  2018-01-13                 AS       AS_CODESHARE          AS   \n",
-       "3  2018-11-03                 AA                 AA          AA   \n",
-       "4  2018-03-18                 UA                 UA          UA   \n",
-       "\n",
-       "   mkt_carrier_fl_num op_unique_carrier tail_num  op_carrier_fl_num  \\\n",
-       "0                2176                AA   N725UW               2176   \n",
-       "1                3861                WN   N8538V               3861   \n",
-       "2                2355                QX   N453QX               2355   \n",
-       "3                2683                AA   N153AN               2683   \n",
-       "4                2072                UA   N36469               2072   \n",
-       "\n",
-       "   origin_airport_id origin  ... distance  carrier_delay weather_delay  \\\n",
-       "0              11057    CLT  ...     83.0            NaN           NaN   \n",
-       "1              13232    MDW  ...   1855.0            NaN           NaN   \n",
-       "2              11884    GEG  ...    279.0            NaN           NaN   \n",
-       "3              11298    DFW  ...   1464.0            NaN           NaN   \n",
-       "4              13930    ORD  ...   1182.0            NaN           NaN   \n",
-       "\n",
-       "  nas_delay  security_delay  late_aircraft_delay  first_dep_time  \\\n",
-       "0       NaN             NaN                  NaN            None   \n",
-       "1       NaN             NaN                  NaN            None   \n",
-       "2       NaN             NaN                  NaN                   \n",
-       "3       NaN             NaN                  NaN            None   \n",
-       "4       NaN             NaN                  NaN            None   \n",
-       "\n",
-       "   total_add_gtime  longest_add_gtime  no_name  \n",
-       "0              NaN                NaN     None  \n",
-       "1              NaN                NaN     None  \n",
-       "2              NaN                NaN     None  \n",
-       "3              NaN                NaN     None  \n",
-       "4              NaN                NaN     None  \n",
-       "\n",
-       "[5 rows x 42 columns]"
+       "(324086, 42)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "flights.head()"
+    "flights.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "25fc289b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "passengers=pd.read_sql(\"SELECT * FROM passengers TABLESAMPLE SYSTEM(14)\",dbConnection)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "56934203",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(330348, 38)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "passengers.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bd9f7b7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fuel_consumption=pd.read_sql(\"SELECT * FROM fuel_comsumption\",dbConnection)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "db6a0518",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3035, 25)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fuel_consumption.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "66f50c55",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Persist to CSV\n",
-    "flights.to_csv('flights_sample.csv')"
+    "flights.to_csv('flights_sample.csv')\n",
+    "passengers.to_csv('passengers_sample.csv')\n",
+    "fuel_consumption.to_csv('fuel_consumption.csv')"
    ]
   },
   {
